force-app/main/default/objects/CaseActivity__c/CaseActivity__c.object-meta.xml
<CustomObject>
    <description>Stores data relating to Agent touch points of Cases. Example of touch points include outbound emails, outbound call logs and public case comments (made by internal users)</description>
    <label>Case Activity</label>
    <nameField>
        <displayFormat>CA-{000000}</displayFormat>
        <label>Activity Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>