force-app/main/default/objects/CaseActivity__c/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Salesforce User who did outbound call , sent email , or commented on the case</description>
    <label>Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Case_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>