force-app/main/default/objects/CaseActivity__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Channel used for First Customer Response</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Call Log</fullName>
            </value>
            <value>
                <fullName>Comment</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>FCR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>