force-app/main/default/objects/CaseActivity__c/fields/IsAgentFirstResponse__c.field-meta.xml
<CustomField>
    <fullName>IsAgentFirstResponse__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that this is agent&apos;s first response on related case</description>
    <label>Is Agent First Response</label>
    <type>Checkbox</type>
</CustomField>