force-app/main/default/objects/CaseActivity__c/fields/IsCaseFirstResponse__c.field-meta.xml
<CustomField>
    <fullName>IsCaseFirstResponse__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that case first response</description>
    <label>Is Case First Response</label>
    <type>Checkbox</type>
</CustomField>