force-app/main/default/objects/CaseActivity__c/fields/ResponseDateTime__c.field-meta.xml
<CustomField>
    <fullName>ResponseDateTime__c</fullName>
    <label>Response Date/Time</label>
    <type>DateTime</type>
</CustomField>