force-app/main/default/objects/CaseActivity__c/fields/SourceId__c.field-meta.xml
<CustomField>
    <fullName>SourceId__c</fullName>
    <description>It can be Email Message Id / Case Comment Id / Outbound Call Id (Task) / Inbound Call Id (Task) (if no outbound call prior)</description>
    <label>Source Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>