force-app/main/default/objects/CaseActivity__c/fields/TotalActualDurationMilliseconds__c.field-meta.xml
<CustomField>
    <fullName>TotalActualDurationMilliseconds__c</fullName>
    <description>Actual Total Duration from Case CreatedDate against contact (Email, Case Comment, Outbound/Inbound Call Log)</description>
    <label>Total Actual Duration (milliseconds)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>