force-app/main/default/objects/CaseActivity__c/fields/TotalBusinessDurationMilliseconds__c.field-meta.xml
<CustomField>
    <fullName>TotalBusinessDurationMilliseconds__c</fullName>
    <description>Business Total Duration from Case CreatedDate against contact (Email, Case Comment, Outbound/Inbound Call Log)</description>
    <label>Total Business Duration (milliseconds)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>