force-app/main/default/objects/CaseActivity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Case__c</columns>
    <columns>Agent__c</columns>
    <columns>CaseCreationDateTime__c</columns>
    <columns>Category__c</columns>
    <columns>ResponseDateTime__c</columns>
    <columns>IsAgentFirstResponse__c</columns>
    <columns>IsCaseFirstResponse__c</columns>
    <columns>ActualDuration__c</columns>
    <columns>BusinessDuration__c</columns>
    <columns>SourceId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>